config/deploy/production/chronograf.yaml
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: chronograf
  name: chronograf
spec:
  ports:
  - name: http
    port: 8888
    targetPort: 8888
  selector:
    io.kompose.service: chronograf
  type: NodePort
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../../docker-compose.yml
    kompose.version: 1.14.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: chronograf
  name: chronograf
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: chronograf
    spec:
      containers:
      - env:
        - name: INFLUXDB_URL
          value: http://influxdb:8086
        - name: LOG_LEVEL
          value: error
        image: chronograf:1.3.8
        name: chronograf
        ports:
        - containerPort: 8888
        resources: {}
        volumeMounts:
        - mountPath: /var/lib/chronograf
          name: chronograf-data
      restartPolicy: Always
      volumes:
      - name: chronograf-data
        persistentVolumeClaim:
          claimName: chronograf-data
