config/deploy/production/influxdb.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: influxdb
  name: influxdb
spec:
  ports:
  - name: "8086"
    port: 8086
    targetPort: 8086
  selector:
    io.kompose.service: influxdb
  type: NodePort
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    io.kompose.service: influxdb
  name: influxdb
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: influxdb
    spec:
      containers:
      - env:
        - name: INFLUXDB_ADMIN_PASSWORD
          valueFrom:
            secretKeyRef:
              name: influx-secrets
              key: password
        - name: INFLUXDB_ADMIN_USER
          valueFrom:
            secretKeyRef:
              name: influx-secrets
              key: username
        - name: INFLUXDB_DB
          valueFrom:
            secretKeyRef:
              name: influx-secrets
              key: database
        - name: INFLUXDB_HTTP_LOG_ENABLED
          value: "false"
        - name: INFLUXDB_LOGGING_LEVEL
          value: warn
        image: influxdb
        name: influxdb
        ports:
        - containerPort: 8086
        resources: {}
        readinessProbe:
          httpGet:
            path: /ping
            port: 8086
          periodSeconds: 1
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 10
        volumeMounts:
        - mountPath: /var/lib/influxdb
          name: influx-data-ssd
      restartPolicy: Always
      volumes:
      - name: influx-data-ssd
        persistentVolumeClaim:
          claimName: influx-data-ssd
