config/deploy/production/kapacitor.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: kapacitor
  labels:
    app: kapacitor
spec:
  type: ClusterIP
  ports:
  - port: 9092
    targetPort: 9092
    name: api
  selector:
    app: kapacitor
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kapacitor
  labels:
    app: kapacitor
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: kapacitor
    spec:
      containers:
      - name: kapacitor
        image: "kapacitor:1.5.0-alpine"
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            cpu: 2
            memory: 2Gi
          requests:
            cpu: 0.1
            memory: 256Mi

        ports:
        - containerPort: 9092
        volumeMounts:
        - name: data
          mountPath: /var/lib/kapacitor
        - name: config
          mountPath: /etc/kapacitor/
      volumes:
      - name: config
        configMap:
          name: kapacitor
      - name: data
        persistentVolumeClaim:
          claimName: kapacitor
