config/deploy/production/mqtt.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    io.kompose.service: mqtt
  name: mqtt
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: mqtt
    spec:
      containers:
      - image: eclipse-mosquitto
        name: mqtt
        # command: ["sleep", "1000000"]
        ports:
        - containerPort: 1883
        - containerPort: 9001
        resources: {}
        volumeMounts:
        - mountPath: /mosquitto/data
          name: mqtt-data-ssd
        - mountPath: /mosquitto/config/mosquitto.conf
          name: mosquitto-config
          subPath: mosquitto.conf
          readOnly: true
        - mountPath: "/mosquitto/mosquitto_passwd"
          name: mosquitto-passwd
          subPath: mosquitto_passwd
          readOnly: true
      restartPolicy: Always
      volumes:
      - name: mqtt-data-ssd
        persistentVolumeClaim:
          claimName: mqtt-data-ssd
      - name: mosquitto-config
        configMap:
          name: mosquitto-config
          items:
          - key: mosquitto.conf
            path: mosquitto.conf
      - name: mosquitto-passwd
        secret:
          secretName: mqtt-credentials
          items:
          - key: mosquitto_passwd
            path: mosquitto_passwd
---
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: mqtt
  name: mqtt
spec:
  ports:
  - name: "1883"
    port: 1883
    targetPort: 1883
  - name: "9001"
    port: 9001
    targetPort: 9001
  selector:
    io.kompose.service: mqtt
