config/deploy/production/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-fanout
  annotations:
    kubernetes.io/ingress.global-static-ip-name: web-static-ip
spec:
  tls:
    - secretName: tls-bigclear-farm-production
  rules:
  - host: chronograf.app.bigclear.farm
    http:
      paths:
        - backend:
            serviceName: chronograf
            servicePort: 8888
  - host: influxdb.app.bigclear.farm
    http:
      paths:
        - backend:
            serviceName: influxdb
            servicePort: 8086
  - host: app.bigclear.farm
    http:
      paths:
        - backend:
            serviceName: web
            servicePort: 80
